Hoàn thành Instructor và admin dashboard